   * Fixed a serious bug in CGDB. After the user entered a command
     CGDB would not accept any more commands. This would only 
     happen sometimes, if at all. This is due to the fact that CGDB
     had a bug in it that was sensitive to the amount of data that
     the read system call returns to it.

   * Fixed a bug in CGDB where it would not show a file in the 
     source viewer if there was a space in the path.

   * Removed the escdelay option. It has been replaced by the 
     timeout, timeoutlen, ttimeout and ttimeoutlen options. Please
     see the CGDB manual for more documentation on these options.

   * Fixed a bug in libkui. If the user quickly typed ESC followed
     by an 'o' while in the GDB window, the 'o' character would not
     get processed by CGDB until another character was hit.

   * CGDB has improved it's -d (Set debugger to use) command line 
     option. CGDB used to force the user to have a space between the 
     -d and the debugger to use, like "cgdb -d /usr/bin/gdb". Now the 
     user can also start CGDB like "cgdb -d/usr/bin/gdb".
   
   * CGDB now honor's the '--' command line option, which will allow the
     user to explicitly say when they want to end passing arguments to
     CGDB and begin passing arguments to the debugger.
   
   * Fixed another bug in the configure script. If the getopt.h header
     file is not available on the system, then CGDB will fail to configure.
     It should finish, and most likely build successfully.
   
   * Fixed yet another bug in the auto tools scripts. cgdb-0.6.3 would
     improperly install gdbmi_driver if make was invoked like 
     'make DESTDIR=/foo install'.
   
   * Fixed another bug in the configure script. If the curses.h header
     file is not available on the system, then CGDB will fail to configure.
     It would previously configure and then end up with a compile error.

cgdb-0.6.3 (06/03/2006)

   * CGDB will no longer crash if you attempt to do a regular expression